# stockkk

./: LICENSE
.github/agents/: copilot-instructions.md
.specify/memory/: constitution.md
alpha-agent-2026/: .env.example  .gitignore  QUICKSTART.md  README.md  pyproject.toml  requirements.txt
alpha-agent-2026/.github/workflows/: daily_scan.yml
alpha-agent-2026/data/: nyse_holidays_2026.json  portfolio.example.json
alpha-agent-2026/src/: __init__.py  main.py
alpha-agent-2026/src/agents/: __init__.py  catalyst_macro.py  metals_advisor.py  orchestrator.py  portfolio_analyst.py  technical_scanner.py
alpha-agent-2026/src/delivery/: __init__.py  github_issue.py  telegram_bot.py
alpha-agent-2026/src/models/: __init__.py  catalyst_event.py  intelligence_report.py  macro_indicator.py  metals_advice.py  portfolio_holding.py  trade_recommendation.py
alpha-agent-2026/src/tools/: __init__.py  alpha_vantage.py  fred_data.py  market_calendar.py  news_sentiment.py  portfolio_reader.py
alpha-agent-2026/src/utils/: __init__.py  config.py  formatters.py  logging.py  retry.py
alpha-agent-2026/tests/: __init__.py  conftest.py
alpha-agent-2026/tests/contract/: test_report_schema.py
alpha-agent-2026/tests/e2e/: test_pipeline.py
alpha-agent-2026/tests/integration/: test_fred_tool.py  test_full_pipeline.py
alpha-agent-2026/tests/unit/: test_biotech_filter.py  test_catalyst_event.py  test_formatters.py  test_macro_indicator.py  test_metals_advisor.py  test_models.py  test_portfolio_analyst.py
specs/1-multi-agent-investment/: data-model.md  plan.md  quickstart.md  (+3 more)
(+5 files in other folders)
